# payments-engine-rust

./: .gitignore  Cargo.toml  README.md  accounts.csv  ai_chat.md  errors.txt  output.csv  output_3.csv  output_c1.csv  project.md  skills-lock.json  transactions_2.csv  transactions_3.csv  transactions_client1.csv
.claude/: settings.local.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_single_record.rs  fuzz_target_1.rs
src/: engine.rs  error.rs  lib.rs  main.rs  model.rs
